Fix - bug and hide overflow-y

--- a/calc/style.scss
+++ b/calc/style.scss
@@ -14,6 +14,7 @@ body{
     align-items: center;
     height: 100vh;
     z-index: 999;
+    overflow-y: hidden;
 }
 
 main{
@@ -62,7 +63,8 @@ main{
             height: 45rem;
             display: grid;
             margin-top: 50px;
-            grid-template-columns: repeat(3, 1fr);      
+            grid-template-columns: repeat(3, 1fr);    
+            overflow-y: hidden;  
             button{
                 padding: 0;
                 font-size: 35px;
@@ -464,12 +466,16 @@ main{
 @media screen and (max-width: 700px) {
     main{
         overflow-y: hidden;
+        p{
+            font-size: 20px;
+        }
         #calculator{
             overflow-y: hidden;
             position: absolute;
             left: 6%;
             top: 10%;
             width: 20rem;
+            height: 25rem;
             .previous{
                 overflow-y: hidden;
             }
@@ -489,52 +495,16 @@ main{
             }
         }
         #report{
-            top: 140%;
+            top: 100%;
             left: 10%;
         }
         #test{
-            top: 95%;
-            right: 1%;
-            position: absolute;
-            height: 25rem;
-            width: 22rem;
-            img{
-                top: 55%;
-            }
-            #tutorial_div{
-                top: -95%;
-                left: 0;
-            }
-        }
-        #tutorial{
-            text-align: center;
-            width: 75%;
-            top: 0;
-            span{
-                text-align: center;
-            }
-        }
-        #test:hover{
-            #tutorial{
-                left: 12%;
-                top: 5%;
-                h2{
-                    font-size: 25px;
-                }
-                span{
-                    font-size: 8px;
-                }
-            }
-            img{
-                width: 130px;
-                height: 130px;
-            }
-            
+            display: none;
         }
         #bug_forms{
             position: absolute;
             overflow-y: hidden;
-            top: 140%;
+            top: 110%;
             width: 100%;
             height: 550px;
             form{
